--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -179,8 +179,8 @@ tda = "!f() { git tag -d $(git tag -l); }; f"
 tdr = push origin --delete
 tp = push --tags
 
-g = "!f() { git grep --line-number -I --ignore-case --heading --break --untracked $1 :/; }; f"
-gw = "!f() { git grep --line-number -I --ignore-case --heading --break --untracked --word-regexp $1 :/; }; f"
+g = grep --line-number -I --ignore-case --heading --break --untracked
+gw = grep --line-number -I --ignore-case --heading --break --untracked --word-regexp
 gf = "!git ls-files --cached --others | grep --ignore-case"
 gfw = "!git ls-files --cached --others | grep --ignore-case --word-regexp"
 
