--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -123,13 +123,21 @@ smi = submodule update --init --recursive
 cfgu = config user.name
 cfgm = config user.email
 
-customlog = log --date-order --pretty=format:"%C(yellow)%H\\ %C(reset)%s\\ %C(auto)%d\\ %n%C(auto)a:\\ %C(magenta)%<(20,trunc)%ar\\ %C(reset)%ad\\ %C(blue)%<(20,trunc)%an\\ %C(reset)%ae\\ %n%C(auto)c:\\ %C(magenta)%<(20,trunc)%cr\\ %C(reset)%cd\\ %C(blue)%<(20,trunc)%cn\\ %C(reset)%ce\\ %n%n%C(reset)%b" --date=format:'%Y-%m-%d %H:%M %z'
+customlog = log --date-order --pretty=format:"%C(yellow)%H\\ %C(reset)%s\\ %C(auto)%d\\ %n%C(auto)a:\\ %C(magenta)%<(20,trunc)%ar\\ %C(reset)%ad\\ %C(blue)%<(20,trunc)%an\\ %C(reset)%ae\\ %n%C(auto)c:\\ %C(magenta)%<(20,trunc)%cr\\ %C(reset)%cd\\ %C(blue)%<(20,trunc)%cn\\ %C(reset)%ce%n" --date=format:'%Y-%m-%d %H:%M %z'
+customloglong = log --date-order --pretty=format:"%C(yellow)%H\\ %C(reset)%s\\ %C(auto)%d\\ %n%C(auto)a:\\ %C(magenta)%<(20,trunc)%ar\\ %C(reset)%ad\\ %C(blue)%<(20,trunc)%an\\ %C(reset)%ae\\ %n%C(auto)c:\\ %C(magenta)%<(20,trunc)%cr\\ %C(reset)%cd\\ %C(blue)%<(20,trunc)%cn\\ %C(reset)%ce\\ %n%n%C(reset)%b" --date=format:'%Y-%m-%d %H:%M %z'
+
 l = !git customlog
-ll = !git l -1 --name-status
-lc = !git l -1 --patch
-ld = !git l --patch --no-merges
+ll = !git customloglong
+ld = !git ll --patch --no-merges
 lf = !git l --name-status --no-merges
+
+l1 = !git l -1
+ll1 = !git ll -1
+ld1 = !git ll --patch --no-merges -1
+lf1 = !git l --name-status --no-merges -1
+
 lr = log --walk-reflogs --pretty=oneline
+
 # show who committed
 lw = shortlog --email --summary
 
